[tool.poetry]
name = "llm-langchain"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.35.62"
langchain = "^0.3.7"
langchain-aws = "^0.2.7"
python-dotenv = "^1.0.1"
langgraph = "^0.2.56"
langchain-openai = "^0.2.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
